# haskchimp

./: CHANGELOG.md  README.md  haskchimp.cabal  stack.yaml
src/: Haskchimp.hs
src/Haskchimp/: Types.hs
test/: Spec.hs
