cabal-version:       2.4
name:                haskchimp
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
homepage:            https://github.com/dariooddenino/haskchimp
bug-reports:         https://github.com/dariooddenino/haskchimp/issues
license:             MIT
license-file:        LICENSE
author:              Dario Oddenino
maintainer:          Dario Oddenino <branch13@gmail.com>
copyright:           2021 Dario Oddenino
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/dariooddenino/haskchimp.git

common common-options
  build-depends:       base >= 4.16.4.0 && < 5
                     , aeson
                     , bytestring
                     , http-conduit
                     , mtl
                     , network
                     , safe-exceptions
                     , text
                     , time
                     , email-validate
                     , pureMD5
                     , unordered-containers
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Haskchimp
                     , Haskchimp.Types

test-suite haskchimp-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       haskchimp
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
